--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "mdbreact": "^4.13.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-router-dom": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
