Finally is working, sort off.

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-REACT_APP_FIREBASE_KEY = "AIzaSyDEMIg4MZQ6YTFXsjs3ucuGy0CyXG5CNKk";
-REACT_APP_FIREBASE_DOMAIN = "nppc-1.firebaseapp.com";
-REACT_APP_FIREBASE_DATABASE = "https://nppc-1.firebaseio.com";
-REACT_APP_FIREBASE_PROJECT_ID = "nppc-1";
-REACT_APP_FIREBASE_STORAGE_BUCKET = "nppc-1.appspot.com";
-REACT_APP_FIREBASE_SENDER_ID = "426230183539";
+REACT_APP_FIREBASE_KEY = AIzaSyAXrv_uQ5Cf8VPThQM2lXT1V4FU_3_oqaQ
+REACT_APP_FIREBASE_DOMAIN = nppc-2019.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE = https://nppc-2019.firebaseio.com
+REACT_APP_FIREBASE_PROJECT_ID = nppc-2019
+REACT_APP_FIREBASE_STORAGE_BUCKET = nppc-2019.appspot.com
+REACT_APP_FIREBASE_SENDER_ID = 566199797218
+REACT_APP_ID: 1:566199797218:web:a4b4c9fed14d858d
